# text-statistics-exercice

./: .gitignore  README.md  main.py  pyproject.toml  text_statistics.py
tests/: test_text_statistics.py
