[tool.poetry]
name = "text-statistics-exercice"
version = "0.0.1"
description = ""
authors = ["renato-farias <renatocdfs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
